--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,8 @@
-;Parameters for different simulators
+﻿;Parameters for different simulators
 ;So far, only for MuMu
 
 [MuMu]
 display_width = 1440 ;游戏画面宽度
 display_height = 810
-title_pic = .\img\window_title.png
+title_pic = .\img\mumu\window_title.png
 title_height = 36
