Add support for game FGO

--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,10 @@
-﻿;Parameters for different simulators
+;Parameters for different simulators
 ;So far, only for MuMu
 
 [MuMu]
-display_width = 1440 ;游戏画面宽度
+display_width = 1440
 display_height = 810
 title_pic = .\img\mumu\window_title.png
 title_height = 36
+
+[FGO]
